--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,14 @@
-# top-most EditorConfig file
+# https://editorconfig.org/
+
 root = true
 
 [*]
 charset = utf-8
 end_of_line = lf
-insert_final_newline = true
-indent_style = tab
+indent_style = space
 indent_size = 4
-tab_width = 4
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
