--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "toxe-obsidian-test-plugin",
+	"id": "obsidian-test-plugin",
 	"name": "Obsidian Test Plugin",
 	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
